fixed z-index for menu button

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -36,7 +36,7 @@
   width: 41%;
   padding: 0 20px 20px 30px;
   text-align: right;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .timeline>li .timeline-panel:before {
